[gd_scene load_steps=3 format=3 uid="uid://bcxm61suvuxjk"]

[ext_resource type="Script" uid="uid://cb6aic4rfyj7f" path="res://components/world_info_view/exploits_viewer.gd" id="1_hmdiy"]
[ext_resource type="PackedScene" uid="uid://lg71e63pa16b" path="res://components/world_info_view/vulnerability_container.tscn" id="2_06d46"]

[node name="ExploitsViewer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hmdiy")
metadata/_tab_index = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LibraryTree" type="Tree" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="ExploitDetailsContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ExploitNameContainer" type="HBoxContainer" parent="HBoxContainer/ExploitDetailsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ExploitDetailsContainer/ExploitNameContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
text = "Exploit Name"

[node name="ExploitNameLineEdit" type="LineEdit" parent="HBoxContainer/ExploitDetailsContainer/ExploitNameContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="MemoryZoneAddressContainer" type="HBoxContainer" parent="HBoxContainer/ExploitDetailsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ExploitDetailsContainer/MemoryZoneAddressContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
text = "Memory Zone Address"

[node name="MemoryZoneAddressLineEdit" type="LineEdit" parent="HBoxContainer/ExploitDetailsContainer/MemoryZoneAddressContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="LibraryNameContainer" type="HBoxContainer" parent="HBoxContainer/ExploitDetailsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ExploitDetailsContainer/LibraryNameContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
text = "Library Name"

[node name="LibraryNameLineEdit" type="LineEdit" parent="HBoxContainer/ExploitDetailsContainer/LibraryNameContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="PartSelectedContainer" type="HBoxContainer" parent="HBoxContainer/ExploitDetailsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ExploitDetailsContainer/PartSelectedContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
text = "Part Selected"

[node name="PartSelectedLineEdit" type="LineEdit" parent="HBoxContainer/ExploitDetailsContainer/PartSelectedContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="LibraryVersionContainer" type="HBoxContainer" parent="HBoxContainer/ExploitDetailsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ExploitDetailsContainer/LibraryVersionContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
text = "Library Version"

[node name="LibraryVersionLineEdit" type="LineEdit" parent="HBoxContainer/ExploitDetailsContainer/LibraryVersionContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="PriceContainer" type="HBoxContainer" parent="HBoxContainer/ExploitDetailsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ExploitDetailsContainer/PriceContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
text = "Price"

[node name="PriceLineEdit" type="LineEdit" parent="HBoxContainer/ExploitDetailsContainer/PriceContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="DescriptionContainer" type="HBoxContainer" parent="HBoxContainer/ExploitDetailsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/ExploitDetailsContainer/DescriptionContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.6
text = "Description"

[node name="DescriptionLineEdit" type="RichTextLabel" parent="HBoxContainer/ExploitDetailsContainer/DescriptionContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="VulnerabilityContainer" parent="HBoxContainer" instance=ExtResource("2_06d46")]
unique_name_in_owner = true
layout_mode = 2
